# motionx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  weighted.patch
src/motionx/: __init__.py  cli.py  core.py  io.py  mt.py
tests/: test_core.py
