[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "motionx-cv"                # <— package name on PyPI
version = "0.1.0"                  # bump every release
description = "Motion extraction (diff, diffgray, MOG2, weighted) with CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sepp Beld" }]
dependencies = [
  "opencv-python>=4.9.0",
  "numpy>=1.23",
]
keywords = ["opencv", "motion", "background subtraction", "video", "computer vision"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
]

[project.scripts]
motionx = "motionx.cli:main"

[project.urls]
Homepage = "https://github.com/engineer1469/motionx"
Issues = "https://github.com/engineer1469/motionx/issues"
